kubernetes/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: tornado-geo-widget
  namespace: geo-widget
spec:
  volumes:
    - name: geo-widget-db
      persistentVolumeClaim:
        claimName: geo-widget
  containers:
    - name: tornado-geo-widget
      image: ghcr.io/kyoobit/tornado-geo-widget:latest
      args:
        - --verbose
        - --mmdb
        - /var/db
      ports:
        - containerPort: 8888
          name: "geo-widget"
      volumeMounts:
        - mountPath: "/var/db"
          name: geo-widget-db
