kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tornado-geo-widget
  namespace: geo-widget
spec:
  selector:
    app: tornado-geo-widget
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
